--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,16 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - seed-data:/app/data
-      - cron-output:/app/cron
+      # Mount named volumes
+      - seed-data:/data
+      - cron-output:/cron
+      # Mount key files as read-only
       - ./student_private.pem:/app/student_private.pem:ro
       - ./student_public.pem:/app/student_public.pem:ro
       - ./instructor_public.pem:/app/instructor_public.pem:ro
     environment:
       - TZ=UTC
+      - PYTHONUNBUFFERED=1   # Ensure logs appear in real-time
     restart: unless-stopped
 
 volumes:
