--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
-version: "3"
-
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: auth-service
+
+    container_name: otp-container
+
     ports:
       - "8080:8080"
+
     volumes:
-      # Named volumes
       - seed-data:/data
       - cron-output:/cron
-      # Local key files mounted read-only
       - ./student_private.pem:/app/student_private.pem:ro
       - ./student_public.pem:/app/student_public.pem:ro
       - ./instructor_public.pem:/app/instructor_public.pem:ro
+
     environment:
-      - TZ=UTC
-      - PYTHONUNBUFFERED=1
+      TZ: UTC
+
     restart: unless-stopped
 
 volumes:
