--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
+# Encrypted seed (sensitive)
 encrypted_seed.txt
 
 # Python cache
 __pycache__/
 *.pyc
-data/seed.txt
+
 # Environment files
 .env
 
 # IDE files
 .vscode/
 .idea/
-
-venv/
