--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@ encrypted_seed.txt
 # Python cache
 __pycache__/
 *.pyc
-
+data/seed.txt
 # Environment files
 .env
 
 # IDE files
 .vscode/
 .idea/
-keys/student_private.pem
+
+venv/
