--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,20 @@ services:
     container_name: otp-container
 
     ports:
-      - "8000:8000"
+      - "8080:8080"
 
     volumes:
-      - ./keys:/app/keys
-      - ./data:/app/data
-      - ./cron:/app/cron
+      - seed-data:/data
+      - cron-output:/cron
+      - ./student_private.pem:/app/student_private.pem:ro
+      - ./student_public.pem:/app/student_public.pem:ro
+      - ./instructor_public.pem:/app/instructor_public.pem:ro
 
     environment:
       TZ: UTC
 
     restart: unless-stopped
+
+volumes:
+  seed-data:
+  cron-output:
