--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,29 @@
+# services:
+#   app:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+
+#     container_name: otp-container
+
+#     ports:
+#       - "8080:8080"
+
+#     volumes:
+#       - seed-data:/data
+#       - cron-output:/cron
+#       - ./student_private.pem:/app/student_private.pem:ro
+#       - ./student_public.pem:/app/student_public.pem:ro
+#       - ./instructor_public.pem:/app/instructor_public.pem:ro
+
+#     environment:
+#       TZ: UTC
+
+#     restart: unless-stopped
+
+# volumes:
+#   seed-data:
+#   cron-output:
 services:
   app:
     build:
@@ -10,8 +36,8 @@ services:
       - "8080:8080"
 
     volumes:
-      - seed-data:/data
-      - cron-output:/cron
+      - ./data:/data
+      - ./2fa-cron:/cron
       - ./student_private.pem:/app/student_private.pem:ro
       - ./student_public.pem:/app/student_public.pem:ro
       - ./instructor_public.pem:/app/instructor_public.pem:ro
@@ -20,7 +46,3 @@ services:
       TZ: UTC
 
     restart: unless-stopped
-
-volumes:
-  seed-data:
-  cron-output:
